--- a/etc/fibo-vue/package.json
+++ b/etc/fibo-vue/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "sass-loader": "^7.1.0",
+    "urijs": "^1.19.2",
     "vue": "^2.6.10",
     "vue-analytics": "^5.17.2",
     "vue-router": "^3.0.3",
